@@ -217,7 +217,7 @@ float submarine::surface_visibility(const vector2& watcher) const
 	else
 		diveFactor = 0.0f;
 
-	diveFactor = diveFactor * cross_section_factor * getProfileFactor ( watcher );
+	diveFactor = diveFactor * vis_cross_section_factor * getProfileFactor ( watcher );
 
 	// Add a value for the periscope when submarine is submerged.
 	if ( is_scope_up () && depth <= periscope_depth )
@@ -242,7 +242,7 @@ float submarine::sonar_visibility ( const vector2& watcher ) const
 		diveFactor = 0.125f * (depth - SUBMARINE_SUBMERGED_DEPTH);
 	}
 
-	return diveFactor * cross_section_factor * getProfileFactor ( watcher );   
+	return diveFactor * sonar_cross_section_factor * getProfileFactor ( watcher );   
 }
 
 void submarine::planes_up(double amount)
